add navigation-bar to index.html file

--- a/index.html
+++ b/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git Website</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati dolore
+      hic suscipit aliquam molestiae dignissimos, enim tenetur dolor corrupti
+      vel eligendi blanditiis eaque earum quis.
+    </p>
+
+    <ul>
+      <li>Home</li>
+      <li>About Us</li>
+      <li>COntact Us</li>
+    </ul>
+  </body>
 </html>
